Add async step as an example - but it does not work properly

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -40,3 +40,9 @@ spring:
 weather:
   source:
     url: "https://ua.sinoptik.ua"
+logging:
+  level:
+    org:
+      springframework:
+        batch:
+          integration: debug
