--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -23,3 +23,5 @@ management:
 weather:
   source:
     url: "https://ua.sinoptik.ua"
+    # as alternative - https://meteopost.com/weather/archive/
+    # request = https://meteopost.com/weather/archive/, body = d=1&m=01&y=2012&city=UKOO&arc=1
